Update repo structure

--- a/src/mailing/templates/new-user.hbs
+++ b/src/mailing/templates/new-user.hbs
@@ -38,7 +38,7 @@
 <table class="mail-header" style="width: 100%; margin-top: 20px;">
     <tr>
         <td class="mail-header__logo" style="width: 100%; text-align: center;">
-            <a href="{{ website }}" style="display: inline-block;">
+            <a href="" style="display: inline-block;">
                 <img src="cid:logo" alt="Logo" style="width: 100px; height: auto; display: block; margin: 0 auto;">
             </a>
         </td>
@@ -83,51 +83,51 @@
     </tr>
 </table>
 <table class="mail-footer" style="width: 100%;">
-    <tr>
-        <td style="width: 100%; text-align: center; padding: 35px;">
-            <p style="font-size: 16px; line-height: 24px; color: #000000; font-weight: 400; margin: 0; padding: 0;">
-                Thanks,
-            </p>
-            <p style="font-size: 16px; line-height: 24px; color: #000000; font-weight: 400; margin: 0; padding: 0;">
-                {{company}}
-            </p>
-        </td>
-    </tr>
-    <tr class="utils-links">
-        <td style="width: 100%; padding-top: 20px; text-align: center; border-top: 1px solid #000000;">
-            <a href="" style="display: inline-block; margin: 0 5px;">
+  <tr>
+    <td style="width: 100%; text-align: center; padding: 35px;">
+      <p style="font-size: 16px; line-height: 24px; color: #000000; font-weight: 400; margin: 0; padding: 0;">
+        Thanks,
+      </p>
+      <p style="font-size: 16px; line-height: 24px; color: #000000; font-weight: 400; margin: 0; padding: 0;">
+        Vue Template
+      </p>
+    </td>
+  </tr>
+  <tr class="utils-links">
+    <td style="width: 100%; padding-top: 20px; text-align: center; border-top: 1px solid #000000;">
+      <a href="" style="display: inline-block; margin: 0 5px;">
                 <span style="font-size: 16px; line-height: 24px; color: #000000; font-weight: 400; margin: 0; padding: 0;">
                     Contact Us
                 </span>
-            </a>
-            <a href="" style="display: inline-block; margin: 0 5px;">
+      </a>
+      <a href="" style="display: inline-block; margin: 0 5px;">
                 <span style="font-size: 16px; line-height: 24px; color: #000000; font-weight: 400; margin: 0; padding: 0;">
                     Privacy Policy
                 </span>
-            </a>
-            <a href="" style="display: inline-block; margin: 0 5px;">
+      </a>
+      <a href="" style="display: inline-block; margin: 0 5px;">
                 <span style="font-size: 16px; line-height: 24px; color: #000000; font-weight: 400; margin: 0; padding: 0;">
                     Terms of Service
                 </span>
-            </a>
-        </td>
-    </tr>
-    <tr class="social-media-links" style="padding-top: 20px;">
-        <td style="width: 100%; padding: 20px; text-align: center;">
-            <a href="{{ social.facebook }}" style="display: inline-block; margin: 0 10px;">
-                <img src="cid:facebook" alt="Facebook" style="width: 24px; height: auto; display: block; margin: 0 auto;">
-            </a>
-            <a href="{{ social.twitter }}" style="display: inline-block; margin: 0 10px;">
-                <img src="cid:twitter" alt="Twitter" style="width: 24px; height: auto; display: block; margin: 0 auto;">
-            </a>
-            <a href="{{ social.instagram }}" style="display: inline-block; margin: 0 10px;">
-                <img src="cid:instagram" alt="Instagram" style="width: 24px; height: auto; display: block; margin: 0 auto;">
-            </a>
-            <a href="{{ social.linkedin }}" style="display: inline-block; margin: 0 10px;">
-                <img src="cid:linkedin" alt="LinkedIn" style="width: 24px; height: auto; display: block; margin: 0 auto;">
-            </a>
-        </td>
-    </tr>
+      </a>
+    </td>
+  </tr>
+  <tr class="social-media-links" style="padding-top: 20px;">
+    <td style="width: 100%; padding: 20px; text-align: center;">
+      <a href="https://www.facebook.com/vuetemplate" style="display: inline-block; margin: 0 10px;">
+        <img src="cid:facebook" alt="Facebook" style="width: 24px; height: auto; display: block; margin: 0 auto;">
+      </a>
+      <a href="https://twitter.com/vuetemplate" style="display: inline-block; margin: 0 10px;">
+        <img src="cid:twitter" alt="Twitter" style="width: 24px; height: auto; display: block; margin: 0 auto;">
+      </a>
+      <a href="https://www.instagram.com/vuetemplate" style="display: inline-block; margin: 0 10px;">
+        <img src="cid:instagram" alt="Instagram" style="width: 24px; height: auto; display: block; margin: 0 auto;">
+      </a>
+      <a href="https://www.linkedin.com/company/vuetemplate" style="display: inline-block; margin: 0 10px;">
+        <img src="cid:linkedin" alt="LinkedIn" style="width: 24px; height: auto; display: block; margin: 0 auto;">
+      </a>
+    </td>
+  </tr>
 </table>
 </body>
 </html>
