Update mailling module import

--- a/src/mailing/templates/reset-password.hbs
+++ b/src/mailing/templates/reset-password.hbs
@@ -54,16 +54,13 @@
 <table class="mail-content" style="width: 100%; margin-top: 20px;">
     <tr>
         <td style="width: 100%; text-align: left;">
-            <!--<p style="font-size: 16px; line-height: 24px; color: #000000; font-weight: 400; margin: 0; padding: 0;">
-                Hi {{username}},
-            </p>-->
             <p style="font-size: 16px; line-height: 24px; color: #000000; font-weight: 400; margin: 0; padding: 0;">
                 A request to reset your password has been made. If you did not make this request, please ignore this email.
             </p>
         </td>
     </tr>
     <tr>
-        <td style="width: 100%; text-align: left;">
+        <td style="width: 100%; text-align: left; padding-top: 20px">
             <p style="font-size: 16px; line-height: 24px; color: #000000; font-weight: 400; margin: 0; padding: 0;">
                 To reset your password, please click the button below.
             </p>
