--- a/src/mailing/templates/verif-code.hbs
+++ b/src/mailing/templates/verif-code.hbs
@@ -55,13 +55,15 @@
   <tr>
     <td style="width: 100%; text-align: center; padding: 20px;">
       <p style="font-size: 16px; line-height: 24px; color: #000000; font-weight: 400; margin: 0; padding: 0;">
-        Here is your new verification code:
+        Click the button below to verify your email address.
       </p>
     </td>
   </tr>
   <tr style="text-align: center;">
-    <td style="background-color: #f5f5f5; padding: 20px; margin: 0; font-size: 24px; font-weight: bold;">
-      {{code}}
+    <td style="width: 100%; text-align: center;">
+      <a href="{{verifyUrl}}" style="display: inline-block; margin-top: 20px; margin-bottom: 20px; padding: 10px 20px; background-color: #000000; color: #ffffff; text-decoration: none; font-size: 16px; line-height: 24px; font-weight: 400; border-radius: 4px;">
+        Verify your email
+      </a>
     </td>
   </tr>
   <tr>
